Components Alignment Solved

--- a/FlatnFoodsFusionFrontend/src/app/flat/flat.component.css
+++ b/FlatnFoodsFusionFrontend/src/app/flat/flat.component.css
@@ -18,13 +18,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 54px;
 }
 
 .search-flats{
-    width: 50%;
+    width: 40%;
     height:90%;
     border-radius: 1rem;
     box-shadow: 0px 0px 10px black;
+    margin-right: 170px;
 }
 
 .search-flats input{
